# PersonalKnowledgeAssistant-

./: LICENSE  Makefile  README.md  pyproject.toml  run.py
configs/: notion_to_vector.yaml
src/personal_knowledge_assistant/: settings.py
src/personal_knowledge_assistant/domain/: __init__.py  types.py
src/personal_knowledge_assistant/domain/base/: __init__.py  document.py
src/personal_knowledge_assistant/domain/documents/: __init__.py  notion.py
src/personal_knowledge_assistant/handlers/: base.py  dispatcher.py  document_cleaner.py  factory.py
src/personal_knowledge_assistant/notion/: content_extractor.py  page_extractor.py
src/personal_knowledge_assistant/pipelines/: __init__.py  notion_to_vector.py
src/personal_knowledge_assistant/steps/: clean_chunk_embed.py  clean_notion_documents.py  extract_notion_page_content.py  fetch_notion_page_metadata.py  save_documents_to_disk.py
src/personal_knowledge_assistant/utils/: text_cleaning.py
